Fixed extra-content alignment in mobile screens

--- a/css/styles.css
+++ b/css/styles.css
@@ -174,6 +174,13 @@ body {
   justify-content: center;
 }
 
+.secondary-content {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 1.5rem;
+}
+
 .main-description {
   color: var(--color-text);
   background: var(--color-dark);
@@ -191,7 +198,7 @@ body {
 }
 
 .footer-index {
-  margin-top: 3.5rem;
+  margin-top: 6.5rem;
 }
 
 @media screen and (max-width: 768px) {
@@ -209,6 +216,14 @@ body {
   .cover__links {
     grid-template-columns: repeat(2, 1fr);
     gap: 1rem 3rem;
+  }
+
+  .main-description {
+    width: 75%;
+  }
+
+  .main-description p {
+    width: 100%;
   }
 }
 
